--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "axios": "^0.19.2",
+    "express": "^4.17.1",
+    "material-icons": "^0.3.1",
+    "vue-router": "^3.1.5",
+    "vuesax": "^3.11.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.4.0",
